--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,10 +22,32 @@ jobs:
         - name: Run installation.
           run: |
             python -m pip install --upgrade pip
+            pip install -r docs/requirements.txt
 
         - name: Make docs
           run: |
             sphinx-build -b html docs build
+            mkdir -p build/examples
+            mkdir -p build/galleries
+            cp docs/run_demo.sh ./
+            bash run_demo.sh
+
+        - name: Make example-for-nsfc-se
+          uses: xu-cheng/latex-action@v2
+          with:
+            latexmk_use_xelatex: true
+            root_file: |
+              青年2024.tex
+              青年2024-se.tex
+
+        - name: Copy Demo to examples docs
+          run: |
+            cp 青年2024.pdf examples/
+            cp 青年2024-se.pdf examples/ 
+
+        - name: Make demo figures
+          run: |
+            python docs/pdf2imgs.py
 
 
         - name: Deploy Website
