--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,3 +1,12 @@
+name: Make Documentation
+
+on:
+  push:
+    branches: main
+  pull_request:
+    branches: main
+
+
 jobs:
     build:
       runs-on: ${{ matrix.os }}
